[gd_scene load_steps=7 format=3 uid="uid://ca2yx02fpiikm"]

[ext_resource type="Texture2D" uid="uid://cfyi0usom847a" path="res://asets/menu.jpg" id="1_lti8b"]
[ext_resource type="Script" uid="uid://c7n0bh204o2us" path="res://menu.gd" id="1_ouk20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouk20"]
bg_color = Color(0.627451, 0.6156863, 0.3372549, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mae5d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hy44"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytr4m"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouk20")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lti8b")
expand_mode = 1

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 581.0
offset_right = 685.0
offset_bottom = 639.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ouk20")

[node name="settings" type="Button" parent="."]
layout_mode = 0
offset_left = 691.0
offset_top = 581.0
offset_right = 863.0
offset_bottom = 640.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mae5d")

[node name="extras" type="Button" parent="."]
layout_mode = 0
offset_left = 870.0
offset_top = 582.0
offset_right = 1007.0
offset_bottom = 635.0
theme_override_styles/normal = SubResource("StyleBoxFlat_4hy44")

[node name="close" type="Button" parent="."]
layout_mode = 0
offset_left = 1014.0
offset_top = 582.0
offset_right = 1133.0
offset_bottom = 635.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ytr4m")

[connection signal="pressed" from="play" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="extras" to="." method="_on_extras_pressed"]
[connection signal="pressed" from="extras" to="." method="_on_button_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
